spade-tests/src/snapshots/spade_tests__integration__trait_tests__entities_in_impl_blocks_are_graceuflly_disallowed.snap
---
source: spade-tests/src/integration.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Entities are not allowed in impl blocks
  ┌─ testinput:4:5
  │
4 │     entity a() -> bool {true}
  │     ^^^^^^^^^^^^^^^^^^^^^^^^^ Not allowed here
  │
  = Did you intend to define a function


